--- a/package.json
+++ b/package.json
@@ -1,27 +1,31 @@
 {
   "name": "tweemage",
   "version": "1.0.0",
-  "description": "",
+  "description": "TweeMage Bot",
   "main": "src/index.js",
+  "repository": "http://github.com/themasix/telegram-tweemage",
   "scripts": {
-    "watch:css": "postcss ./tailwind.css -o src/css/main.css -w",
-    "build:css": "postcss ./tailwind.css -o src/css/main.css",
-    "go-live": "live-server --open=./src",
-    "start": "npm-run-all -p watch:css go-live",
-    "shot": "node src/shot.js",
-    "build": "NODE_ENV=production npm run build:css"
+    "watch:css": "postcss ./tailwind.css -o src/page/css/main.css -w",
+    "build:css": "postcss ./tailwind.css -o src/page/css/main.css",
+    "go-live": "live-server --open=./src/page",
+    "dev": "npm-run-all -p watch:css go-live",
+    "start": "NODE_ENV=production npm run build:css && node src/server.js",
+    "shot": "node src/shot.js"
   },
   "author": "theMasix",
   "license": "ISC",
   "dependencies": {
-    "puppeteer": "^5.2.1",
-    "tailwindcss": "^1.5.2"
-  },
-  "devDependencies": {
     "autoprefixer": "^9.7.6",
-    "live-server": "^1.2.1",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
-    "postcss-import": "^12.0.1"
+    "postcss-import": "^12.0.1",
+    "puppeteer": "^5.2.1",
+    "tailwindcss": "^1.5.2",
+    "telegraf": "^3.38.0"
+  },
+  "devDependencies": {
+    "live-server": "^1.2.1"
   }
 }
